--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": {
         "name": "Carlos Stenzel",
         "email": "carlosstenzel@hotmail.com",
-        "url": "carlosstenzel.com"
+        "url": "https://carlosstenzel.com"
     },
     "repository": {
         "url": "https://github.com/CodeHamper/React-Facial"
